--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset = 'utf-8'>
         <meta name = 'viewport' content = 'width=device-width, initial-scale=1'>
         <title>Temperatura</title>
-        <link rel='stylesheet' href='/app.css'>
+        <link rel='stylesheet' href='./app.css'>
         <style>
         body {
             background-color:#485dc5;
@@ -13,6 +13,6 @@
     </head>
     <body>
         <div id='app'></div>
-        <script src = '/app.js'></script>
+        <script src = './app.js'></script>
     </body>
 </html>
